# SynapseHub

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SETUP.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
analysis/: 2026-04-29-watcher-windows-cwd-investigation.md  2026-04-30-focus-ux-investigation.md
docs/: hook-setup.md  release-process.md
scripts/: generate-icons.mjs
src/: icons.ts  main.ts  session-view.dom.test.ts  session-view.test.ts  session-view.ts  styles.css
src-tauri/: Cargo.toml  audit.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: focus.rs  hooks.rs  lib.rs  main.rs  types.rs  watcher.rs
src/styles/: base.css  main.css  tokens.css
src/styles/components/: drawer.css  empty.css  footer.css  header.css  onboarding.css  session-card.css  stats.css  toast.css  toolbar.css
