[package]
name = "synapsehub"
version = "0.1.3"
edition = "2021"
rust-version = "1.80"

[lib]
name = "synapsehub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri            = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-notification = "2"
tauri-plugin-updater      = "2"
tauri-plugin-process      = "2"
serde            = { version = "1", features = ["derive"] }
serde_json       = "1"
tokio            = { version = "1", features = ["full"] }
axum             = { version = "0.7", default-features = false, features = ["http1", "tokio", "json"] }
tower-http       = { version = "0.5", features = ["limit"] }
sysinfo          = "0.33"
dirs             = "5"
git2             = { version = "0.20", default-features = false }
log              = "0.4"
env_logger       = "0.11"
uuid             = { version = "1", features = ["v4"] }
rand             = "0.8"
subtle           = "2"
governor         = "0.6"
tower_governor   = "0.4"

# Windows-specific: focus window by PID
[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_Threading",
] }

[dev-dependencies]
# `tower::util::ServiceExt::oneshot` for driving the axum Router in tests
# without binding a TCP listener. The base `tower` crate is already pulled
# transitively by axum / tower-http; we just enable the `util` feature here.
tower = { version = "0.5", features = ["util"] }

[profile.release]
opt-level     = "s"
lto           = true
codegen-units = 1
panic         = "abort"
strip         = true
